refactor build.gradle